[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysurf96"
requires-python = ">=3.7"
license = { text = "GPLv3" }
dynamic = ["version"]
description = "Surface Wave Dispersion Python Wrapper for surf96."
readme = "README.md"
authors = [{ name = "Marius Paul Isken", email = "mi@gfz-potsdam.de" }]
maintainers = [{ name = "Marius Paul Isken", email = "mi@gfz-potsdam.de" }]
keywords = ["InSAR", "satellite", "radar", "earthquake", "optimization"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: C",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
pysurf96 = ['surfdisp96_ext.*']

[project.urls]
Home = "https://pyrocko.org"
GitHub = "https://github.com/miili/pysurf96"
Issues = "https://github.com/miili/pysurf96/issues"

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "numpy"]
